--- a/css/custom.css
+++ b/css/custom.css
@@ -406,6 +406,71 @@ button:hover {
     background: #e76262;
 }
 
+#socials {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 10px;
+    padding-bottom: 6px;
+    background-color: #ff9d9d;
+}
+
+.linked-in-icon,
+.github-icon, 
+.email-svg {
+    height: 60px; 
+    width: 64px;
+    margin-right: 25px;
+    cursor: pointer;
+}
+
+.linkclick,
+.github-click,
+.email-click {
+    border: #e76262 2px solid;
+    border-radius: 5px;
+    background-color: #fff;
+    color: #000000;
+    padding: 25px;
+    visibility: hidden;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    flex-direction: column;
+    top: 83px;
+    left: 9px; 
+    right: 18px; 
+    bottom: 114px;
+    font-size: medium;
+
+}
+
+.linkedlink,
+.github-link {
+color:#e7526c
+}
+
+#close-modal,
+#close-modal-github,
+#close-modal-email {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    margin: 15px 15px 0 0;
+    padding: 3px 11px;
+    border-radius: 5px;
+    background-color: #f8f9fa;
+}
+
+#close-modal:hover {
+        background: #e76262;
+}
+    
+
+
+
 
 
 @media (min-width: 768px) {
@@ -434,7 +499,6 @@ button:hover {
 
         section {
             padding: 16% 3%;
-            margin-bottom: 20px;
         }
 
         .name {
@@ -522,6 +586,19 @@ button:hover {
     grid-template-rows: 1fr 1fr 1fr;
    
 }
+
+.linkclick,
+.github-click,
+.email-click {
+    top: 82px;
+    right: 78px; 
+    left: 78px; 
+    bottom: 209px;
+    font-size: large;
+}
+
+
+
     
     
 }
