added two new projects

--- a/css/custom.css
+++ b/css/custom.css
@@ -315,7 +315,8 @@ color: #000000;
 .container-3 .project, 
 .container-4 .project, 
 .container-5 .project,
-.container-6 .project {
+.container-6 .project,
+.container-7 .project {
     position: relative; 
     display: flex; 
     border-radius: 5px;
