made button color more visible

--- a/css/custom.css
+++ b/css/custom.css
@@ -419,7 +419,7 @@ button {
     margin: auto;
     padding: 10px 36px;
     border-radius: 5px;
-    background: #ced4da;
+    background: #ffb3b1;
     cursor: pointer;
 }
 
